# finalproject

./: .gitignore  documentation.html  milestone.md  styles.css  timeline.html  wiki.txt
actuator_firmware/: CMakeLists.txt  app.overlay  prj.conf  proj.conf
actuator_firmware/src/: comms.c  comms.h  main.c  servo.c  servo.h
base_firmware/: CMakeLists.txt  prj.conf
base_firmware/src/: ble_central.c  ble_central.h  ble_client.c  ble_receive.c  ble_receive.h  main.c  minheap.c  minheap.h
dashboard/: start.bat
dashboard/backend/: .gitignore  README.md  requirements.txt  ser.py
dashboard/backend/app/: main.py
dashboard/backend/app/routers/: planes.py
dashboard/backend/app/schemas/: flights.sql
dashboard/frontend/: package-lock.json  package.json
dashboard/frontend/src/: App.css  App.tsx
dashboard/frontend/src/component/: counter.tsx  heading.tsx  list.tsx  section.tsx  sidepanel.tsx  styles.css
dashboard/frontend/src/component/sidepanel/: flight.tsx  flightlist.tsx  styles.css
dashboard/frontend/src/webhooks/: api.tsx  health.tsx  map.tsx  planes.jsx  styles.css
fs_firmware/: CMakeLists.txt  README.md  prj.conf
fs_firmware/src/: ble_central.c  ble_central.h  fs_log.c  fs_log.h  main.c
lib/src/: protocol.c  protocol.h
milestone/: milestone.md  poster_template.pptx  wiki.md  ~$poster_template.pptx
pi/: ads_b.py
sensor_firmware/: CMakeLists.txt  prj.conf
sensor_firmware/boards/: xiao_ble_nrf52840_sense.overlay
sensor_firmware/sensor_node/src/: main.c
sensor_firmware/src/: ble_transfer.c  ble_transfer.h  gps_driver.c  gps_driver.h  main.c  serial.c  serial.h
shell_firmware/: CMakeLists.txt  prj.conf  sample.yaml
shell_firmware/lib/: kalman.c  kalman.h  least_squares.c  least_squares.h  matrix.c  matrix.h
shell_firmware/src/: main.c  minheap.c  minheap.h  shell.c  shell.h
test_receive/: CMakeLists.txt  prj.conf  test.py
test_receive/src/: ble_client.c  ble_client.h  main.c
